[package]
name = "vkdsp"
version = "0.1.0"
authors = ["Ryan Tse <rytse@umd.edu>", "Eli Lichtblau <elilichtblau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.18"
image = "0.23"
num = "0.3.1"

[[example]]
name = "fft"
path = "src/fft.rs"

[[example]]
name = "fft_rs_impl"
path = "src/fft_rs_impl.rs"
